# AI-Agent-Researcher

./: README.md
mvp-agent/: README.md  main.py  pyproject.toml
research-agent/: README.md  main.py  pyproject.toml
research-agent/src/: firecrawl_service.py  models.py  print_styles.py  settings.py  workflow.py
