[project]
name = "mvp-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.25",
    "langgraph>=0.4.8",
    "pydantic-settings>=2.10.0",
    "rich>=14.0.0",
]
